syntax = "proto3";

option go_package = "github.com/bootjp/elastickv/proto";

service RawKV {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  uint64 commit_index = 1;
  bool success = 2;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  uint64 read_at_index = 1;
  bytes value = 2;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  uint64 commit_index = 1;
  bool success = 2;
}
